# ShanePro

./: .gitignore  README.md
apps/frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.js
apps/frontend/src/: App.spec.js  App.vue  main.js
apps/frontend/src/api/: services.js
apps/frontend/src/components/: AiChatPanel.vue  DocumentLibraryPanel.vue  ServiceStatusCard.vue  Sidebar.vue
apps/frontend/src/styles/: theme.css
docs/: postgres-rag-inspection.md
docs/plans/: 2026-06-24-001-feat-personal-site-demo-plan.md  2026-06-25-001-feat-ai-chat-web-search-tool-plan.md  2026-06-25-002-refactor-ai-chat-langchain-agent-plan.md  2026-06-25-003-feat-ai-chat-personal-document-rag-plan.md
services/java-api/: pom.xml
services/java-api/src/main/java/com/example/personalsite/: PersonalSiteApplication.java
services/java-api/src/main/java/com/example/personalsite/common/: ApiResponse.java
services/java-api/src/main/java/com/example/personalsite/controller/: SiteController.java
services/java-api/src/main/java/com/example/personalsite/dto/: SiteInfoResponse.java
services/java-api/src/main/java/com/example/personalsite/service/: SiteInfoService.java
services/java-api/src/main/resources/: application.yml
services/python-api/: README.md  pyproject.toml
services/python-api/app/: __init__.py  ai_chat.py  document_chunker.py  document_parser.py  document_service.py  embedding_service.py  main.py  rag_config.py  rag_tool.py  schemas.py  vector_store.py  web_search.py
services/python-api/tests/: test_site.py
(+2 files in other folders)
