[project]
name = "personal-site-python-api"
version = "0.1.0"
description = "Python API for Shane's personal site"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-huggingface>=0.1.0",
    "langchain-postgres>=0.0.12",
    "numpy<2",
    "psycopg[binary]>=3.2.0",
    "pypdf>=5.0.0",
    "pytest>=8.0.0",
    "sentence-transformers>=3.0.0,<4",
    "torch==2.2.2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "torch>=2.6,<3; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "transformers<5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
